refactor-SCRUM-70: Replace waitTimer with Cooldown class